--- a/dd/sass/s-result.scss
+++ b/dd/sass/s-result.scss
@@ -535,6 +535,7 @@ body{background:#f7f7f7;padding-bottom:60px;}
     width:380px;
     height:310px;
     overflow: hidden;
+    color: #fff;
 }
 .icon-item{
     font-size:13px;
