--- a/dd/sass/_common.scss
+++ b/dd/sass/_common.scss
@@ -161,5 +161,5 @@ font-size:16px;font-family: $fontFamily;line-height: normal; /* for non-ie */
 ::-webkit-selection{background:#ff0014;color:#fff;}
 ::selection{background:#ff0014;color:#fff;}
 .header-box ul.login{
-  // visibility: hidden;
+  visibility: hidden;
 }
