--- a/dd/sass/index.scss
+++ b/dd/sass/index.scss
@@ -318,6 +318,7 @@ li.current-page:hover{
 	height:100%;
 	width:100%;
 	position: relative;
+    color:#333;
 	p{
 		color:#fff;
 		position: absolute;
