--- a/dd/css/zdm.css
+++ b/dd/css/zdm.css
@@ -186,6 +186,9 @@ input:-ms-input-placeholder {
 html {
   height: 100%; }
 
+h1, h2, h3, h4, h5 {
+  font-weight: normal; }
+
 body {
   background: #f7f7f7;
   padding-bottom: 60px; }
@@ -338,149 +341,257 @@ li.current-page:hover {
   background: url(../images/search.png) center center no-repeat;
   cursor: pointer; }
 
-.main {
-  width: 1200px;
-  margin: 0 auto; }
+.loading:after {
+  z-index: -1; }
 
-.menu {
-  width: 280px;
-  background: #eee; }
+.hot-topics img {
+  vertical-align: middle; }
 
-.menu-list-item {
-  cursor: pointer;
-  position: relative; }
-
-.item-title {
-  color: #666;
+.hot-topics {
   font-size: 16px;
-  padding-left: 20px;
-  height: 40px;
-  line-height: 40px;
+  color: #333333; }
+
+.hot-topics img {
+  margin-right: 8px; }
+
+.special {
+  margin-top: 10px; }
+
+.special li {
+  margin-top: 10px; }
+
+.erweima {
   display: block;
-  font-weight: normal; }
-
-.icon-arrow {
-  position: absolute;
-  top: 0;
-  right: 10px;
-  display: inline-block;
-  width: 20px;
-  height: 40px;
-  background: red;
-  background: url(../images/arrow.png) center center no-repeat;
-  -webkit-transition: all 0.4s ease;
-  transition: all 0.4s ease; }
-
-.open a.icon-arrow {
-  -webkit-transform: rotate(90deg);
-      -ms-transform: rotate(90deg);
-          transform: rotate(90deg);
-  background: url(../images/arrow-w.png) center center no-repeat;
-  background-size: 8px 13px; }
-
-.submenu-list-item {
-  height: 40px;
-  line-height: 40px; }
-
-.submenu-list a {
-  display: block;
-  text-decoration: none;
+  margin-top: 20px;
+  width: 277px;
+  height: 129px;
+  background: #e9e9e9;
   color: #999;
-  padding-left: 42px;
-  -webkit-transition: all 0.25s ease;
-  transition: all 0.25s ease; }
+  font-size: 20px; }
 
-.submenu-list a:hover {
-  background: #ff6372;
-  color: #fff; }
+.content-area {
+  width: 100%; }
 
-.submenu-list {
-  font-size: 14px; }
-
-.active {
-  background: #ff6372; }
-
-.active + ul + a {
-  background: url(../images/arrow-w.png) center center no-repeat; }
-
-.open a[class="item-title"] + ul + a {
-  background: url(../images/arrow.png) center center no-repeat; }
-
-a.active {
-  color: #fff; }
-
-.active a {
-  color: #fff; }
-
-.content {
-  width: 900px;
-  margin-left: 10px;
-  margin-top: -10px; }
-
-.content-list-item {
-  width: 280px;
-  margin: 10px; }
-
-.content-list-item dd {
-  padding: 14px 20px 13px 20px;
-  background: #fff; }
-  .content-list-item dd p {
-    font-size: 14px; }
-    .content-list-item dd p a {
-      color: #14191e;
-      display: block;
-      width: 100%;
-      overflow: hidden;
-      white-space: nowrap;
-      text-overflow: ellipsis; }
-
-.content-list-item .icon-list {
-  margin-top: 16px; }
-
-.icon-item {
-  width: 33.3333%;
-  font-size: 13px;
-  color: #d0d0d0; }
-
-.content-list-item {
-  -webkit-transition: all 0.2s ease-in-out;
-  transition: all 0.2s ease-in-out; }
-
-.content-list-item:hover {
-  box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.1), 0 4px 8px 0 rgba(0, 0, 0, 0.2); }
-
-.icon {
-  height: 17px;
-  width: 18px;
-  display: inline-block;
-  vertical-align: middle;
-  background-repeat: no-repeat; }
-
-.icon-s {
-  background-image: url(../images/s.png); }
-
-.icon-p {
-  background-image: url(../images/p.png); }
-
-.icon-z {
-  background-image: url(../images/z.png); }
-
-/*HACK:for IE8*/
-.footer-area {
-  width: 100%;
-  position: absolute;
-  bottom: 0; }
-
-.footer-box {
+.content-box {
   width: 1180px;
   margin: 0 auto; }
 
-.footer-box p, .footer-box p a {
-  font-size: 13px;
-  color: #A3A2A2; }
+.main-content {
+  width: 800px;
+  min-height: 100px; }
+
+.hot-topics-area {
+  width: 300px;
+  margin-left: 80px; }
+
+.loading:after {
+  z-index: -1; }
+
+.erweima {
+  display: block;
+  margin-top: 35px;
+  width: 300px;
+  height: 140px;
+  background: #e9e9e9;
+  color: #999;
+  font-size: 20px; }
+
+.erweima span {
+  display: inline-block;
+  padding-top: 40px;
+  padding-left: 30px;
+  height: 100px; }
+
+.erweima img {
+  margin-left: 40px;
+  margin-top: -33px; }
+
+.hot {
+  margin-top: 20px; }
+
+.hot-topics {
+  color: #333;
+  font-size: 16px;
+  font-weight: normal; }
+
+.hot-topics img {
+  margin-right: 10px; }
+
+.hot-list {
+  margin-left: -6px;
+  margin-right: -6px; }
+
+.hot-list a {
+  display: block; }
+
+.hot-list-container {
+  margin-top: 20px; }
+
+.hot-list li {
+  margin: 6px;
+  position: relative;
+  -webkit-transition: all 200ms; }
+  .hot-list li p {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    padding: 5px;
+    height: 30px;
+    background: black;
+    background: rgba(0, 0, 0, 0.4);
+    color: #fff;
+    font-size: 12px;
+    line-height: 16px; }
+
+.hot-list li:hover {
+  box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.1), 0 4px 8px 0 rgba(0, 0, 0, 0.2); }
+
+.result-item {
+  width: 760px;
+  padding: 20px;
+  height: 188px;
+  background: #fff;
+  margin-bottom: 30px;
+  -webkit-transition: all 200ms;
+  transition: all 200ms; }
+
+.result-item:hover {
+  box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.1), 0 4px 8px 0 rgba(0, 0, 0, 0.2); }
+
+.result-detail {
+  width: 552px;
+  margin-left: 20px;
+  height: 100%; }
+
+.view-result a {
+  display: block;
+  width: 80px;
+  height: 30px;
+  text-align: center;
+  line-height: 30px;
+  font-size: 14px;
+  color: #fff;
+  background: #ea7780; }
+
+.result-title {
+  font-weight: normal;
+  font-size: 20px;
+  color: #333;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  display: block;
+  margin-top: -5px; }
+
+.result-price {
+  font-size: 16px;
+  color: #e60012;
+  margin-top: 11px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap; }
+
+.result-content {
+  margin-top: 11px;
+  font-size: 18px;
+  line-height: 25px;
+  color: #666;
+  height: 60px;
+  overflow: hidden; }
+
+.readmore {
+  color: #306aff; }
+
+.result-footer {
+  margin-top: 27px; }
+
+.date, .source {
+  padding-top: 10px;
+  vertical-align: bottom; }
+
+.source {
+  margin-left: 10px; }
 
 .img-container {
-  display: block;
-  width: 280px;
-  height: 228px;
+  position: relative;
   overflow: hidden; }
+
+.result-list .outdate .outdate-tag {
+  position: absolute;
+  background: #d0d0d0;
+  font-size: 18px;
+  display: block;
+  left: 0;
+  top: 0;
+  color: #fff; }
+
+@media (min-width: 0px) {
+  .result-list .outdate .outdate-tag {
+    position: absolute;
+    background: #d0d0d0;
+    font-size: 18px;
+    display: block;
+    width: 150px;
+    text-align: center;
+    -webkit-transform: rotate(-45deg);
+        -ms-transform: rotate(-45deg);
+            transform: rotate(-45deg);
+    left: -40px;
+    top: 22px;
+    color: #fff; } }
+
+.outdate a.result-title, .outdate p.result-price {
+  color: #d0d0d0; }
+
+.rectangle-bounce {
+  display: none; }
+
+@media (min-width: 0px) {
+  .rectangle-bounce {
+    text-align: center;
+    height: 50px;
+    display: block; } }
+
+.rectangle-bounce div {
+  height: 100%;
+  width: 10px;
+  margin: 0 3px 0 0;
+  background-color: #e60012;
+  display: inline-block;
+  -webkit-animation: stretchdelay 1.2s infinite ease-in-out;
+  animation: stretchdelay 1.2s infinite ease-in-out; }
+
+.rectangle-bounce .rect2 {
+  -webkit-animation-delay: -1.1s;
+  animation-delay: -1.1s; }
+
+.rectangle-bounce .rect3 {
+  -webkit-animation-delay: -1.0s;
+  animation-delay: -1.0s; }
+
+.rectangle-bounce .rect4 {
+  -webkit-animation-delay: -0.9s;
+  animation-delay: -0.9s; }
+
+.rectangle-bounce .rect5 {
+  -webkit-animation-delay: -0.8s;
+  animation-delay: -0.8s; }
+
+@-webkit-keyframes stretchdelay {
+  0%, 40%, 100% {
+    -webkit-transform: scaleY(0.4); }
+  20% {
+    -webkit-transform: scaleY(1); } }
+
+@keyframes stretchdelay {
+  0%, 40%, 100% {
+    transform: scaleY(0.4);
+    -webkit-transform: scaleY(0.4); }
+  20% {
+    transform: scaleY(1);
+    -webkit-transform: scaleY(1); } }
+
+.IE9LOADING {
+  text-align: center;
+  color: #e60012; }
