--- a/dd/sass/author.scss
+++ b/dd/sass/author.scss
@@ -265,6 +265,7 @@ li.current-page:hover{
 	padding-bottom:4px;
 	margin-top:10px;
     -webkit-transition: all 200ms;
+    transition: all 200ms;
 }
 .article a{
    display: inline-block;
