--- a/dd/sass/zdm-2016-09-16.scss
+++ b/dd/sass/zdm-2016-09-16.scss
@@ -3,8 +3,7 @@
 $headerHeight:50px;
 html{height:100%;}
 h1,h2,h3,h4,h5{font-weight:normal;}
-$fontFamily:"Microsoft Yahei","Hiragino Sans GB", "Helvetica Neue", Helvetica,heiti, Arial, sans-serif;
-body{background:#f7f7f7;padding-bottom:60px;font-family: $fontFamily}
+body{background:#f7f7f7;padding-bottom:60px;}
 .wrapper{
     /*确定高度的最小值。防止页面缩放时底部出现空白*/
     width:100%;
@@ -317,7 +316,7 @@ li.current-page:hover{
   font-size: 18px;
   line-height: 25px;
   color: #666;
-  height: 86px;
+  height: 60px;
   overflow: hidden;
 }
 .readmore{
@@ -329,8 +328,7 @@ li.current-page:hover{
 .date,.source{
   padding-top:10px;
   vertical-align: bottom;
-  color: #999;
-  font-size: 14px;
+  color: #14191e;
 }
 .source{
   margin-left: 10px;
@@ -372,237 +370,65 @@ li.current-page:hover{
   color:#fff;
   }
 }
-
-.tips{
-  width: 400px;
-  height: 140px;
-  position:fixed;
-  left: 50%;
-  top:50%;
-  margin-left: -200px;
-  margin-top: -70px;
-  text-align: center;
+.outdate a.result-title,.outdate p.result-price{
+  color:#d0d0d0;
 }
-.tips-title{
-  background-color:#ea7780;
-  color:#fff;
-  line-height: 40px;
-  font-size: 25px;
-  font-weight:normal;
-}
-.tips-content{
-  line-height: 100px;
-  background-color:#F7F7F7;
-  font-size: 20px;
-  color:#ea7780;
-} 
-.tips-content a{
-  color:#306aff;
-}
-
-
-.login-area{
-  width: 700px;
-  min-height: 600px;
-  background-color:#fff;
-  margin-top: 20px;
-  position:relative;
+// 分页loading 效果
+.rectangle-bounce {
   display: none;
 }
-.login-area input[type="button"],.regist-area input[type="button"]{
-  cursor: pointer;
+@media (min-width: 0px){
+  .rectangle-bounce {
+      text-align: center;
+      height:50px;
+      display: block;
+  }
 }
-
-.logo-area{
-  text-align: center;
-}
-.logo-box{
-  width: 600px;
-  margin:0 auto;
-  border-bottom:2px solid #dcdcdc; 
-  position:relative;
-  padding:25px 0 20px 0;
-}
-.logo-box h2{
-  position:absolute;
-  right: 20px;
-  bottom:0;
-  font-weight: normal;
-  font-size: 36px;
-  color:#000;
-}
-
-.input-box{
-  width: 550px;
-  margin:0 auto;
-  padding:40px 0;
-}
-.input-box input{
-  width: 520px;
-  height: 30px;
-  background-color:#F7F7F7;
-  padding:20px 0 20px 30px;
-  font-size: 24px;
-  color:#474747;
-}
-.input-box .subscribe-desc-box{
-  color:#d81010;
-  margin-top: 30px;
-  line-height: 1;
-}
-.input-box .subscribe-desc{
-  width: auto;
-  vertical-align: middle;
-  margin-right: 10px;
-}
-
-
-.regist-input-box .subscribe-desc{
-  width: auto;
-  vertical-align: middle;
-  margin-left: 10px;
-}
-
-.regist-area .subscribe-desc-label{
-  margin:0;
-  font-size: 16px;
-  color:#d81010;
-  margin-left: 10px;
-  vertical-align: 2px;
-}
-
-.username{
-  border-bottom:2px #dcdcdc solid;
-}
-// ok
-input:-moz-placeholder { /* Mozilla Firefox 4 to 18 */ 
-font-size:24px;font-family: $fontFamily;line-height: 24px; /* for non-ie */  
-}
-// ok
-input::-moz-placeholder { /* Mozilla Firefox 19+ */
-font-size:24px;font-family: $fontFamily;line-height: 24px; /* for non-ie */  
-}
-// ok
-input:-ms-input-placeholder { /* Internet Explorer 10+ */
-font-size:24px;font-family: $fontFamily;line-height: normal; /* for non-ie */  
-}
-input::placeholder{ //for new
-  font-size:24px;font-family: $fontFamily;line-height: normal; /* for non-ie */  
-}
-input:placeholder{ // for new
-  font-size:24px;font-family: $fontFamily;line-height: normal; /* for non-ie */  
-}
-.button-box{
-  width: 550px;
-  margin:0 auto;
-}
-.button-box input{
-  width: 100%;
-  // height: 30px;
-  padding:15px 0;
-  background-color:#5ae17d;
-  line-height: 30px;
-  font-size: 30px;
-  color:#fff;
-}
-.button-box .regist-btn{
-  margin-top: 10px;
-  background-color:#2977ba;
-}
-.subscribe-tip{
-  position:absolute;
-  bottom:40px;
-  right: 75px;
-  font-size: 26px;
-  font-weight:normal;
-  color:#d81010;
-}
-
-.regist-area{
-  height: 700px;
-  width: 700px;
-  background-color:#fff;
-  margin-top: 20px;
-  position:relative;
-  display: none;
-}
-.regist-input-box{
-  width: 550px;
-  margin:0 auto;
-  padding:40px 0;
-}
-.regist-input-box input{
-  width: 520px;
-  height: 30px;
-  background-color:#F7F7F7;
-  padding:20px 0 20px 30px;
-  font-size: 24px;
-  color:#474747;
-  margin-top: 10px;
-  margin-bottom: 20px;
-}
-.regist-area label{
-  line-height: 1;
-  font-size: 24px;
-  color:#474747;
-  margin-left: 30px;
-}
-.regist-input-box .username{
-  border-bottom:none;
-}
-.regist-area .button-area .regist-regist-btn{
-  background-color: #5ae17d;
-  margin-top: -20px;
-}
-.regist-area .subscribe-tip{
-  position:absolute;
-  bottom:20px;
-  right: 75px;
-  font-size: 26px;
-  font-weight:normal;
-  color:#d81010;
-}
-.tips-mask{
-  background-color:transparent;
-  position: absolute;
-  z-index: 999999999;
-  width: 100%;
-  min-height: 100%;
-  left: 0;
-  top: 0;
-}
-.login-btn,.regist-btn{
-  font-family:$fontFamily;
-}
-.result-detail{
-  position:relative;
-}
-.result-footer{
-  width: 100%;
-  position:absolute;
-  bottom:0;
-}
-
-.subscribe-main-content{
-  text-align: center;
-  color:rgb(113,113,113);
-  font-size: 24px;
-  margin-top:200px;
-}
-
-.subscribe-main-content a{
+.rectangle-bounce div {
+    height: 100%;
+    width: 10px;
+    margin: 0 3px 0 0;
+    background-color: #e60012;
     display: inline-block;
-    width: 80px;
-    height: 30px;
-    line-height: 30px;
-    font-size: 14px;
-    color: #fff;
-    background: #ea7780;
-    margin-top: 30px;
+    -webkit-animation: stretchdelay 1.2s infinite ease-in-out;
+    animation: stretchdelay 1.2s infinite ease-in-out
 }
-
-
-
-
-
-
+.rectangle-bounce .rect2 {
+    -webkit-animation-delay: -1.1s;
+    animation-delay: -1.1s
+}
+.rectangle-bounce .rect3 {
+    -webkit-animation-delay: -1.0s;
+    animation-delay: -1.0s
+}
+.rectangle-bounce .rect4 {
+    -webkit-animation-delay: -0.9s;
+    animation-delay: -0.9s
+}
+.rectangle-bounce .rect5 {
+    -webkit-animation-delay: -0.8s;
+    animation-delay: -0.8s
+}
+@-webkit-keyframes stretchdelay {
+    0%, 40%, 100% {
+        -webkit-transform: scaleY(0.4)
+    }
+    20% {
+        -webkit-transform: scaleY(1)
+    }
+}
+@keyframes stretchdelay {
+    0%, 40%, 100% {
+        transform: scaleY(0.4);
+        -webkit-transform: scaleY(0.4)
+    }
+    20% {
+        transform: scaleY(1);
+        -webkit-transform: scaleY(1)
+    }
+}
+.IE9LOADING{
+    text-align:center;
+    color:#e60012;
+}
+// 分页loading效果 end
