zdm.js加了一些注释

--- a/dd/css/common.css
+++ b/dd/css/common.css
@@ -1,211 +1,1 @@
-body {
-  font: 16px/1.5 "Hiragino Sans GB", "Helvetica Neue", Helvetica, "Microsoft Yahei", heiti, Arial, sans-serif;
-  color: #14191e;
-  position: relative; }
-
-body, div, p, ul, li, form, input, h1, h2, h3, h4, h5, h6, table, dl, dd, textarea, ol {
-  margin: 0;
-  padding: 0; }
-
-ul, li {
-  list-style: none; }
-
-img {
-  vertical-align: middle;
-  border: none;
-  display: inline-block; }
-
-a {
-  text-decoration: none;
-  border: none; }
-
-input {
-  outline: none;
-  border: none; }
-
-input::-webkit-input-placeholder {
-  /* WebKit browsers */
-  font-size: 16px;
-  font-family: "Hiragino Sans GB", "Helvetica Neue", Helvetica, "Microsoft Yahei", heiti, Arial, sans-serif;
-  line-height: 20px;
-  /* for non-ie */ }
-
-input:-moz-placeholder {
-  /* Mozilla Firefox 4 to 18 */
-  font-size: 16px;
-  font-family: "Hiragino Sans GB", "Helvetica Neue", Helvetica, "Microsoft Yahei", heiti, Arial, sans-serif;
-  line-height: 19px;
-  /* for non-ie */ }
-
-input::-moz-placeholder {
-  /* Mozilla Firefox 19+ */
-  font-size: 16px;
-  font-family: "Hiragino Sans GB", "Helvetica Neue", Helvetica, "Microsoft Yahei", heiti, Arial, sans-serif;
-  line-height: 19px;
-  /* for non-ie */ }
-
-input:-ms-input-placeholder {
-  /* Internet Explorer 10+ */
-  font-size: 16px;
-  font-family: "Hiragino Sans GB", "Helvetica Neue", Helvetica, "Microsoft Yahei", heiti, Arial, sans-serif;
-  line-height: normal;
-  /* for non-ie */ }
-
-input::placeholder {
-  font-size: 16px;
-  font-family: "Hiragino Sans GB", "Helvetica Neue", Helvetica, "Microsoft Yahei", heiti, Arial, sans-serif;
-  line-height: normal;
-  /* for non-ie */ }
-
-input:placeholder {
-  font-size: 16px;
-  font-family: "Hiragino Sans GB", "Helvetica Neue", Helvetica, "Microsoft Yahei", heiti, Arial, sans-serif;
-  line-height: normal;
-  /* for non-ie */ }
-
-.clearfix:after {
-  content: "";
-  display: table;
-  clear: both; }
-
-.f-l {
-  float: left; }
-
-.f-r {
-  float: right; }
-
-.disnone {
-  display: none; }
-
-.disblk {
-  display: block; }
-
-@media (min-width: 0px) {
-  .loading {
-    position: relative; }
-  .loading:after {
-    content: "";
-    position: absolute;
-    display: inline-block;
-    width: 20px;
-    height: 20px;
-    border: 2px #ccc solid;
-    border-left: 2px red solid;
-    left: 50%;
-    top: 50%;
-    margin: -12px 0 0 -12px;
-    border-radius: 50%;
-    z-index: -1;
-    -webkit-animation: loading 0.7s linear infinite;
-    -moz-animation: loading 0.7s linear infinite;
-    -ms-animation: loading 0.7s linear infinite;
-    -o-animation: loading 0.7s linear infinite;
-    animation: loading 0.7s linear infinite;
-    display: none\9\0; } }
-
-@-webkit-keyframes loading {
-  from {
-    -webkit-transform: rotate(0); }
-  to {
-    -webkit-transform: rotate(359deg); } }
-
-@-moz-keyframes loading {
-  from {
-    -moz-transform: rotate(0); }
-  to {
-    -moz-transform: rotate(359deg); } }
-
-@-ms-keyframes loading {
-  from {
-    -ms-transform: rotate(0); }
-  to {
-    -ms-transform: rotate(359deg); } }
-
-@-o-keyframes loading {
-  from {
-    -o-transform: rotate(0); }
-  to {
-    -o-transform: rotate(359deg); } }
-
-@keyframes loading {
-  from {
-    transform: rotate(0); }
-  to {
-    transform: rotate(359deg); } }
-
-.mask {
-  background: #000;
-  filter: alpha(opacity=50);
-  opacity: .5;
-  position: absolute;
-  z-index: 9999999;
-  width: 100%;
-  min-height: 100%;
-  left: 0;
-  top: 0; }
-
-.login-box {
-  position: absolute;
-  border-radius: 3px;
-  width: 800px;
-  background: #fff;
-  z-index: 10000000;
-  left: 50%;
-  top: -401px;
-  margin-left: -400px;
-  height: 400px; }
-
-.login-title-p {
-  text-align: center;
-  border-bottom: 1px solid #eee;
-  line-height: 60px;
-  height: 60px;
-  font-size: 16px; }
-
-.login-close {
-  position: absolute;
-  height: 24px;
-  width: 24px;
-  background: url(../images/close.png) center center no-repeat;
-  top: 24px;
-  right: 30px;
-  transition: .3s; }
-
-.login-method-container {
-  height: 340px;
-  background: #fff;
-  position: absolute;
-  width: 100%; }
-
-.login-close:hover {
-  transform: rotate(180deg); }
-
-.login-method {
-  position: absolute;
-  top: 40px; }
-
-.left {
-  left: 125px; }
-
-.right {
-  right: 125px; }
-
-.login-method p {
-  margin-top: 20px;
-  text-align: center;
-  color: #999; }
-
-::-moz-selection {
-  background: #ff0014;
-  color: #fff; }
-
-::-webkit-selection {
-  background: #ff0014;
-  color: #fff; }
-
-::selection {
-  background: #ff0014;
-  color: #fff; }
-
-.header-box ul.login {
-  visibility: hidden; }
+a,img,input{border:none}body{font:16px/1.5 "Hiragino Sans GB","Helvetica Neue",Helvetica,"Microsoft Yahei",heiti,Arial,sans-serif;color:#14191e;position:relative}body,dd,div,dl,form,h1,h2,h3,h4,h5,h6,input,li,ol,p,table,textarea,ul{margin:0;padding:0}li,ul{list-style:none}img{vertical-align:middle;display:inline-block}a{text-decoration:none}input{outline:0}input::-webkit-input-placeholder{font-size:16px;font-family:"Hiragino Sans GB","Helvetica Neue",Helvetica,"Microsoft Yahei",heiti,Arial,sans-serif;line-height:20px}input::-moz-placeholder{font-size:16px;font-family:"Hiragino Sans GB","Helvetica Neue",Helvetica,"Microsoft Yahei",heiti,Arial,sans-serif;line-height:19px}input:-ms-input-placeholder{font-size:16px;font-family:"Hiragino Sans GB","Helvetica Neue",Helvetica,"Microsoft Yahei",heiti,Arial,sans-serif;line-height:normal}input::placeholder{font-size:16px;font-family:"Hiragino Sans GB","Helvetica Neue",Helvetica,"Microsoft Yahei",heiti,Arial,sans-serif;line-height:normal}input:placeholder{font-size:16px;font-family:"Hiragino Sans GB","Helvetica Neue",Helvetica,"Microsoft Yahei",heiti,Arial,sans-serif;line-height:normal}.clearfix:after{content:"";display:table;clear:both}.f-l{float:left}.f-r{float:right}.disnone{display:none}.disblk{display:block}@media (min-width:0px){.loading{position:relative}.loading:after{content:"";position:absolute;width:20px;height:20px;border:2px solid #ccc;border-left:2px red solid;left:50%;top:50%;margin:-12px 0 0 -12px;border-radius:50%;z-index:-1;-webkit-animation:loading .7s linear infinite;animation:loading .7s linear infinite;display:none\9\0}}.login-box,.login-close,.login-method,.mask{position:absolute}@-webkit-keyframes loading{from{-webkit-transform:rotate(0)}to{-webkit-transform:rotate(359deg)}}@keyframes loading{from{-webkit-transform:rotate(0);transform:rotate(0)}to{-webkit-transform:rotate(359deg);transform:rotate(359deg)}}.mask{background:#000;filter:alpha(opacity=50);opacity:.5;z-index:9999999;width:100%;min-height:100%;left:0;top:0}.login-box{border-radius:3px;width:800px;background:#fff;z-index:10000000;left:50%;top:-401px;margin-left:-400px;height:400px}.login-title-p{text-align:center;border-bottom:1px solid #eee;line-height:60px;height:60px;font-size:16px}.login-close{height:24px;width:24px;background:url(../images/close.png) center center no-repeat;top:24px;right:30px;-webkit-transition:.3s;transition:.3s}.login-method-container{height:340px;background:#fff;position:absolute;width:100%}.login-close:hover{-webkit-transform:rotate(180deg);-ms-transform:rotate(180deg);transform:rotate(180deg)}.login-method{top:40px}.left{left:125px}.right{right:125px}.login-method p{margin-top:20px;text-align:center;color:#999}::-moz-selection{background:#ff0014;color:#fff}::-webkit-selection{background:#ff0014;color:#fff}::selection{background:#ff0014;color:#fff}.header-box ul.login{visibility:hidden}
