--- a/dd/css/download.css
+++ b/dd/css/download.css
@@ -1,490 +1,1 @@
-body *, div#wechat, div#weibo, p#wechataccount, p#weibolink {
-  -webkit-tap-highlight-color: transparent; }
-
-.cycle-slideshow, .cycle-slideshow *, body * {
-  box-sizing: border-box; }
-
-div.head, div.wrapperall {
-  width: 100%; }
-
-.btn, .cycle-pager > * {
-  cursor: pointer; }
-
-html {
-  font-family: sans-serif;
-  -ms-text-size-adjust: 100%;
-  -webkit-text-size-adjust: 100%;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale; }
-
-body {
-  display: block;
-  min-width: 1024px;
-  margin: 0;
-  font-family: "Hiragino Sans GB", "Helvetica Neue", Helvetica, "Microsoft Yahei", heiti, Arial, sans-serif; }
-
-body * {
-  -webkit-text-size-adjust: none;
-  margin: 0;
-  padding: 0;
-  border: 0; }
-
-div {
-  background-repeat: no-repeat;
-  background-size: contain; }
-
-h2, p {
-  -webkit-transition-timing-function: ease-out;
-  transition-timing-function: ease-out; }
-
-.stripe h2 {
-  color: #000;
-  font-weight: 300;
-  line-height: 110px;
-  font-size: 60px; }
-
-.stripe p {
-  color: #000;
-  line-height: 36px;
-  font-size: 30px; }
-
-div.head {
-  height: 684px;
-  background-image: url(../images/dnld_bg.jpg);
-  background-size: cover;
-  background-position: center center;
-  background-origin: content-box;
-  background-clip: border-box;
-  background-color: transparent;
-  text-align: center;
-  position: relative; }
-
-div.message {
-  position: absolute;
-  bottom: 0;
-  left: 50%;
-  background: 0 0;
-  width: 1000px;
-  height: 600px;
-  margin-left: -510px; }
-
-div#android, div#barcode {
-  bottom: 86px; }
-
-div#android, div#apple {
-  width: 225px;
-  height: 77px;
-  right: 754px;
-  position: absolute; }
-
-#barcode img, div#barcode {
-  width: 172px;
-  height: 172px; }
-
-div#logo {
-  width: 269px;
-  height: 98px;
-  position: absolute;
-  top: 100px;
-  right: 710px;
-  background-image: url(../images/dnld_logo.png); }
-
-div#apple {
-  bottom: 181px; }
-
-#android img:hover, #apple img:hover {
-  opacity: .7;
-  filter: alpha(opacity=70); }
-
-div#barcode {
-  position: absolute;
-  right: 564px; }
-
-div#swipe {
-  width: 347px;
-  height: 577px;
-  position: absolute;
-  bottom: 0;
-  right: 0;
-  background-image: url(../images/swipeborder.png); }
-
-div.page {
-  width: 100%;
-  height: 600px;
-  background-size: contain;
-  background-position: center center;
-  background-origin: content-box;
-  background-clip: border-box;
-  background-color: transparent;
-  margin-left: auto;
-  margin-right: auto; }
-
-div.foot, div.stripe {
-  bottom: 0;
-  margin-left: -400px; }
-
-div.stripe {
-  position: absolute;
-  left: 50%;
-  background: 0 0;
-  height: 600px;
-  width: 900px; }
-
-div.leftpic, div.lefttext {
-  left: 0; }
-
-div.leftpic, div.rightpic {
-  width: 278px;
-  height: 522px;
-  position: absolute;
-  top: 39px; }
-
-div.rightpic {
-  right: 100px; }
-
-div.lefttext, div.righttext {
-  position: absolute;
-  top: 190px;
-  width: 600px;
-  height: 200px; }
-
-p#wechataccount, p#weibolink {
-  top: 96px; }
-
-.footer, .gray, .white {
-  width: 100%;
-  position: relative; }
-
-div.righttext {
-  right: 0; }
-
-.gray, .white {
-  height: 600px; }
-
-.gray {
-  background: #fafafa; }
-
-.white {
-  background: #fff; }
-
-.footer, div.foot {
-  height: 294px;
-  background: #fff; }
-
-.cycle-slideshow, .cycle-slideshow img, div#footbarcode, div#inner, div.foot, p#notice, p#wechataccount, p#weibolink {
-  position: absolute; }
-
-div.foot {
-  left: 50%;
-  width: 800px;
-  color: #000; }
-
-div#wechat, div#weibo {
-  top: 76px;
-  width: 73px;
-  height: 60px;
-  position: absolute; }
-
-div#inner {
-  top: 86px;
-  left: 10px;
-  width: 600px;
-  height: 136px; }
-
-p#notice {
-  top: 0;
-  left: 0;
-  line-height: 34px;
-  font-size: 30px; }
-
-div#weibo {
-  left: 0;
-  background-image: url(../images/weibo.png); }
-
-div#wechat {
-  left: 318px;
-  background-image: url(../images/wechat.png); }
-
-p#weibolink {
-  left: 88px; }
-
-p#wechataccount {
-  left: 400px; }
-
-div.foot p {
-  margin: 0;
-  line-height: 30px;
-  font-size: 24px; }
-
-div.foot p > a {
-  text-decoration: underline;
-  color: #000; }
-
-#icp a, div.copyright {
-  color: #969696; }
-
-#icp a, a {
-  text-decoration: none; }
-
-div#footbarcode {
-  width: 186px;
-  height: 166px;
-  display: none;
-  bottom: 54px;
-  right: 90px;
-  background-image: url(../images/QR.png); }
-
-div.copyright {
-  width: 100%;
-  background: #fafafa;
-  height: 70px; }
-
-span#copyright {
-  text-align: center;
-  display: block;
-  font-size: 20px;
-  padding-top: 25px; }
-
-span#icp {
-  text-align: right;
-  display: block;
-  font-size: 10px; }
-
-.cycle-slideshow {
-  width: 305px;
-  height: 485px;
-  margin: 0;
-  padding: 0;
-  bottom: 0;
-  right: 21px; }
-
-.cycle-slideshow img {
-  top: 0;
-  left: 0;
-  width: 100%;
-  padding: 0;
-  display: block; }
-
-.cycle-slideshow img:first-child {
-  position: static;
-  z-index: 100; }
-
-.cycle-pager {
-  text-align: center;
-  width: 100%;
-  overflow: hidden;
-  height: 72px;
-  z-index: 500;
-  position: absolute;
-  bottom: 0; }
-
-.cycle-pager span {
-  font-family: arial;
-  font-size: 200%;
-  line-height: 72px;
-  color: #fff;
-  width: 36px;
-  height: 48px;
-  display: inline-block;
-  cursor: pointer; }
-
-.cycle-pager span.cycle-pager-active {
-  color: #e83929; }
-
-li, ul {
-  list-style: none; }
-
-a, img, input {
-  border: none;
-  outline: 0; }
-
-.f-r {
-  float: right; }
-
-.f-l {
-  float: left; }
-
-img {
-  vertical-align: middle;
-  display: inline-block; }
-
-body {
-  color: #14191e; }
-
-.header-box ul.login {
-  visibility: hidden; }
-
-.author-area img, .login .face a {
-  border-radius: 50%; }
-
-.header {
-  background: rgba(0, 0, 0, 0.8);
-  height: 50px;
-  text-align: center;
-  line-height: 50px;
-  min-width: 1200px;
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  z-index: 99999999; }
-
-@media \0screen\,screen\9 {
-  .header {
-    background: #000;
-    filter: alpha(opacity=80); } }
-
-.header a {
-  color: #fff;
-  display: block;
-  width: 100%;
-  height: 100%;
-  font-size: 14px;
-  font-family: "Hiragino Sans GB", "Helvetica Neue", Helvetica, "Microsoft Yahei", heiti, Arial, sans-serif !important; }
-
-.category, .down-app, .index {
-  width: 80px;
-  height: 48px; }
-
-li.current-page:hover {
-  background-color: #363c41;
-  height: 48px;
-  -webkit-transition: all 0.2s ease-in-out;
-  transition: all 0.2s ease-in-out; }
-
-.category:hover, .down-app:hover, .index:hover, .login:hover {
-  background-color: #363c41;
-  height: 50px;
-  -webkit-transition: all 0.2s ease-in-out;
-  transition: all 0.2s ease-in-out; }
-
-.header-box li.category, .header-box li.down-app {
-  margin-left: 0; }
-
-.down-app {
-  width: 95px;
-  padding-left: 15px;
-  position: relative; }
-
-.header-app-icon {
-  position: absolute;
-  left: 7px;
-  top: 17px;
-  display: inline-block;
-  width: 11px;
-  height: 16px;
-  background: url(../images/head-app-icon.png) no-repeat;
-  vertical-align: -3px;
-  transition: .3s;
-  -moz-transition: .3s;
-  -webkit-transition: .3s;
-  -o-transition: .3s; }
-
-.author-area span, .icon, .share-img {
-  vertical-align: middle; }
-
-.down-app:hover .header-app-icon {
-  background: url(../images/head-app-icon.png) 0 -16px no-repeat; }
-
-.current-page {
-  border-bottom: 2px #ff0014 solid;
-  background: #000; }
-
-.header-box {
-  width: 1200px;
-  margin: 0 auto;
-  height: 100%; }
-
-.header-box .f-l, .logo a span {
-  margin-left: 10px; }
-
-.login {
-  position: relative;
-  width: 110px;
-  height: 100%; }
-
-.login-title {
-  position: absolute;
-  left: 10px; }
-
-.login .face {
-  padding-top: 12px;
-  margin-right: 10px;
-  position: absolute;
-  right: 20px; }
-
-.login .face a {
-  width: 26px;
-  height: 26px;
-  background: url(../images/def-user.png) center center no-repeat;
-  background-size: 26px 26px; }
-
-.login:hover .person-state-list {
-  filter: alpha(opacity=100);
-  opacity: 1; }
-
-.login:hover .person-state-list-container, .person-state-list {
-  display: block;
-  filter: alpha(opacity=100);
-  opacity: 1; }
-
-.person-state-list-container {
-  position: absolute;
-  top: 50px;
-  left: 0;
-  background-color: #363c41;
-  width: 110px;
-  height: 60px;
-  display: none; }
-
-.hot-list li p, .person-state-list li:hover a {
-  background: #000; }
-
-.author-area a, .author-area span, .content-box img {
-  display: inline-block; }
-
-.person-state-list {
-  position: absolute;
-  z-index: 3;
-  height: 100%;
-  width: 100%;
-  line-height: 30px;
-  font-size: 12px;
-  filter: alpha(opacity=0);
-  opacity: 0;
-  -webkit-transition: all 0.4s ease-in-out;
-  transition: all 0.4s ease-in-out; }
-
-.person-state-list li {
-  text-align: center;
-  height: 30px; }
-
-.search-form {
-  height: 50px;
-  width: 280px;
-  position: relative; }
-
-.search-input {
-  width: 280px;
-  height: 34px;
-  padding: 16px 0 0 44px;
-  color: #fff;
-  font-size: 16px;
-  background: #616368;
-  position: absolute;
-  left: 0;
-  top: 0; }
-
-.btn {
-  position: absolute;
-  top: 15px;
-  left: 14px;
-  height: 20px;
-  width: 20px;
-  background: url(../images/search.png) center center no-repeat; }
-
-@media (min-width: 0px) {
-  .search-input {
-    padding: 0 0 0 44px;
-    height: 100%;
-    position: static; } }
+body *,div#wechat,div#weibo,p#wechataccount,p#weibolink{-webkit-tap-highlight-color:transparent}.cycle-slideshow,.cycle-slideshow *,body *{box-sizing:border-box}div.head,div.wrapperall{width:100%}.btn,.cycle-pager>*{cursor:pointer}html{font-family:sans-serif;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;-webkit-font-smoothing:antialiased;-moz-osx-font-smoothing:grayscale}body{display:block;min-width:1024px;margin:0;font-family:"Hiragino Sans GB","Helvetica Neue",Helvetica,"Microsoft Yahei",heiti,Arial,sans-serif}body *{-webkit-text-size-adjust:none;margin:0;padding:0;border:0}div{background-repeat:no-repeat;background-size:contain}h2,p{-webkit-transition-timing-function:ease-out;transition-timing-function:ease-out}.stripe h2{color:#000;font-weight:300;line-height:110px;font-size:60px}.stripe p{color:#000;line-height:36px;font-size:30px}div.head{height:684px;background-image:url(../images/dnld_bg.jpg);background-size:cover;background-position:center center;background-origin:content-box;background-clip:border-box;background-color:transparent;text-align:center;position:relative}div.message{position:absolute;bottom:0;left:50%;background:0 0;width:1000px;height:600px;margin-left:-510px}div#android,div#barcode{bottom:86px}div#android,div#apple{width:225px;height:77px;right:754px;position:absolute}#barcode img,div#barcode{width:172px;height:172px}div#logo{width:269px;height:98px;position:absolute;top:100px;right:710px;background-image:url(../images/dnld_logo.png)}div#apple{bottom:181px}#android img:hover,#apple img:hover{opacity:.7;filter:alpha(opacity=70)}div#barcode{position:absolute;right:564px}div#swipe{width:347px;height:577px;position:absolute;bottom:0;right:0;background-image:url(../images/swipeborder.png)}div.page{width:100%;height:600px;background-size:contain;background-position:center center;background-origin:content-box;background-clip:border-box;background-color:transparent;margin-left:auto;margin-right:auto}div.foot,div.stripe{bottom:0;margin-left:-400px}div.stripe{position:absolute;left:50%;background:0 0;height:600px;width:900px}div.leftpic,div.lefttext{left:0}div.leftpic,div.rightpic{width:278px;height:522px;position:absolute;top:39px}div.rightpic{right:100px}div.lefttext,div.righttext{position:absolute;top:190px;width:600px;height:200px}p#wechataccount,p#weibolink{top:96px}.footer,.gray,.white{width:100%;position:relative}div.righttext{right:0}.gray,.white{height:600px}.gray{background:#fafafa}.white{background:#fff}.footer,div.foot{height:294px;background:#fff}.cycle-slideshow,.cycle-slideshow img,div#footbarcode,div#inner,div.foot,p#notice,p#wechataccount,p#weibolink{position:absolute}div.foot{left:50%;width:800px;color:#000}div#wechat,div#weibo{top:76px;width:73px;height:60px;position:absolute}div#inner{top:86px;left:10px;width:600px;height:136px}p#notice{top:0;left:0;line-height:34px;font-size:30px}div#weibo{left:0;background-image:url(../images/weibo.png)}div#wechat{left:318px;background-image:url(../images/wechat.png)}p#weibolink{left:88px}p#wechataccount{left:400px}div.foot p{margin:0;line-height:30px;font-size:24px}div.foot p>a{text-decoration:underline;color:#000}#icp a,div.copyright{color:#969696}#icp a,a{text-decoration:none}div#footbarcode{width:186px;height:166px;display:none;bottom:54px;right:90px;background-image:url(../images/QR.png)}div.copyright{width:100%;background:#fafafa;height:70px}span#copyright{text-align:center;display:block;font-size:20px;padding-top:25px}span#icp{text-align:right;display:block;font-size:10px}.cycle-slideshow{width:305px;height:485px;margin:0;padding:0;bottom:0;right:21px}.cycle-slideshow img{top:0;left:0;width:100%;padding:0;display:block}.cycle-slideshow img:first-child{position:static;z-index:100}.cycle-pager{text-align:center;width:100%;overflow:hidden;height:72px;z-index:500;position:absolute;bottom:0}.cycle-pager span{font-family:arial;font-size:200%;line-height:72px;color:#fff;width:36px;height:48px;display:inline-block;cursor:pointer}.cycle-pager span.cycle-pager-active{color:#e83929}li,ul{list-style:none}a,img,input{border:none;outline:0}.f-r{float:right}.f-l{float:left}img{vertical-align:middle;display:inline-block}body{color:#14191e}.header-box ul.login{visibility:hidden}.author-area img,.login .face a{border-radius:50%}.header{background:rgba(0,0,0,.8);height:50px;text-align:center;line-height:50px;min-width:1200px;position:fixed;top:0;left:0;width:100%;z-index:99999999}@media \0screen\,screen\9{.header{background:#000;filter:alpha(opacity=80)}}.header a{color:#fff;display:block;width:100%;height:100%;font-size:14px;font-family:"Hiragino Sans GB","Helvetica Neue",Helvetica,"Microsoft Yahei",heiti,Arial,sans-serif!important}.category,.down-app,.index{width:80px;height:48px}li.current-page:hover{background-color:#363c41;height:48px;-webkit-transition:all .2s ease-in-out;transition:all .2s ease-in-out}.category:hover,.down-app:hover,.index:hover,.login:hover{background-color:#363c41;height:50px;-webkit-transition:all .2s ease-in-out;transition:all .2s ease-in-out}.header-box li.category,.header-box li.down-app{margin-left:0}.down-app{width:95px;padding-left:15px;position:relative}.header-app-icon{position:absolute;left:7px;top:17px;display:inline-block;width:11px;height:16px;background:url(../images/head-app-icon.png) no-repeat;vertical-align:-3px;transition:.3s;-moz-transition:.3s;-webkit-transition:.3s;-o-transition:.3s}.author-area span,.icon,.share-img{vertical-align:middle}.down-app:hover .header-app-icon{background:url(../images/head-app-icon.png) 0 -16px no-repeat}.current-page{border-bottom:2px #ff0014 solid;background:#000}.header-box{width:1200px;margin:0 auto;height:100%}.header-box .f-l,.logo a span{margin-left:10px}.login{position:relative;width:110px;height:100%}.login-title{position:absolute;left:10px}.login .face{padding-top:12px;margin-right:10px;position:absolute;right:20px}.login .face a{width:26px;height:26px;background:url(../images/def-user.png) center center no-repeat;background-size:26px 26px}.login:hover .person-state-list{filter:alpha(opacity=100);opacity:1}.login:hover .person-state-list-container,.person-state-list{display:block;filter:alpha(opacity=100);opacity:1}.person-state-list-container{position:absolute;top:50px;left:0;background-color:#363c41;width:110px;height:60px;display:none}.hot-list li p,.person-state-list li:hover a{background:#000}.author-area a,.author-area span,.content-box img{display:inline-block}.person-state-list{position:absolute;z-index:3;height:100%;width:100%;line-height:30px;font-size:12px;filter:alpha(opacity=0);opacity:0;-webkit-transition:all .4s ease-in-out;transition:all .4s ease-in-out}.person-state-list li{text-align:center;height:30px}.search-form{height:50px;width:280px;position:relative}.search-input{width:280px;height:34px;padding:16px 0 0 44px;color:#fff;font-size:16px;background:#616368;position:absolute;left:0;top:0}.btn{position:absolute;top:15px;left:14px;height:20px;width:20px;background:url(../images/search.png) center center no-repeat}@media (min-width:0px){.search-input{padding:0 0 0 44px;height:100%;position:static}}
